Upgrade to Proact 3.0.0

--- a/bower.json
+++ b/bower.json
@@ -6,9 +6,12 @@
     "test"
   ],
   "dependencies": {
-    "purescript-proact": "^2.0.0",
+    "purescript-io": "^5.0.0",
+    "purescript-proact": "^3.0.0",
     "purescript-pux": "^12.0.0",
-    "purescript-react-dom": "^4.1.0",
+    "purescript-profunctor-lenses": "^3.0.0",
+    "purescript-react": "^5.0.0",
+    "purescript-react-dom": "^5.0.0",
     "purescript-signal": "^9.0.0"
   },
   "devDependencies": {
